]bugfix] corrected deep-cloning of knobs Array to fix the labels not showing

--- a/src/styles/_knobs.scss
+++ b/src/styles/_knobs.scss
@@ -107,6 +107,10 @@
   border: 0;
   border-top: 1px solid var(--textColor);
   opacity: .25;
+
+  &:last-of-type{
+    margin-bottom: 0;
+  }
 }
 
 .knobs__knob{
